--- a/client/style.css
+++ b/client/style.css
@@ -25,6 +25,7 @@ body {
 }
 
 .btn-buy {
+  max-width: 90px;
   border: none;
   padding: 0.8em 2.5em;
   outline: none;
@@ -325,6 +326,8 @@ figure {
   max-height: 100px;
   background: linear-gradient(to left, lightblue, #00bfff);
   border-radius: 7px 13px 7px 13px;
+  margin-left: 18%;
+  margin-bottom: 10px;
 }
 
 .filter-products {
@@ -375,4 +378,21 @@ figure {
   border-radius: 25px;
   width: 50%;
   margin: auto;
+}
+.cart-main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  max-width: 600px;
+  width: 100%;
+  max-height: 400px;
+  background-color: var(--bg-main);
+  box-shadow: 0 0 7px 7px rgb(0 0 0 / 20%);
+  border-radius: 15px;
+  color: white;
+  padding: 20px;
+  margin: 0 10px;
+  overflow-y: auto;
+  scrollbar-width: thin;
+  scrollbar-color: darkblue white;
 }
