--- a/client/style.css
+++ b/client/style.css
@@ -25,7 +25,7 @@ body {
 }
 
 .btn-buy {
-  max-width: 90px;
+  margin: auto;
   border: none;
   padding: 0.8em 2.5em;
   outline: none;
@@ -36,8 +36,9 @@ body {
   cursor: pointer;
   background: none;
   text-shadow: 3px 3px 10px rgba(0, 0, 0, 0.45);
-  margin-left: 50px;
   margin-top: 50px;
+  left: 50%;
+  transform: translate(-50%, 0);
 }
 
 .btn-buy:before,
@@ -302,6 +303,7 @@ input {
 }
 
 .add-to-cart-btn {
+  cursor: pointer;
   width: 100%;
   background: linear-gradient(to right, lightblue, black);
   /* font-weight: bold; */
@@ -356,6 +358,7 @@ figure {
 }
 
 .plus-minus {
+  cursor: pointer;
   width: 50%;
   background-color: #3c424a;
   color: white;
@@ -380,9 +383,6 @@ figure {
   margin: auto;
 }
 .cart-main {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
   max-width: 600px;
   width: 100%;
   max-height: 400px;
@@ -395,4 +395,14 @@ figure {
   overflow-y: auto;
   scrollbar-width: thin;
   scrollbar-color: darkblue white;
+}
+
+.amount-of-products {
+  margin-left: 20px;
+  color: lightgreen;
+}
+
+.total-price {
+  margin-left: 90px;
+  color: lightgreen;
 }
